# py-caddy-config

./: CLAUDE.md  README.md  pyproject.toml
caddyconfig/: __init__.py  admin.py  apps.py  base.py  builder.py  config.py  logging.py  match.py  route.py  server.py
caddyconfig/handlers/: __init__.py  authentication.py  file_server.py  reverse_proxy.py  static_response.py  subroute.py
tests/: test_admin_logging.py  test_builder.py  test_edge_cases.py  test_handlers.py  test_integration.py  test_match.py  test_server.py
