[project]
name = "caddyconfig"
version = "0.1.6"
description = "Caddy JSON configuration manipulation (Pydantic v2 + fluent builder)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]
# Classifier list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pydantic :: 2",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats :: JSON",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/thewiw/py-caddy-config"
Documentation = "https://github.com/thewiw/py-caddy-config/blob/master/README.md"
Repository = "https://github.com/thewiw/py-caddy-config.git"
Issues = "https://github.com/thewiw/py-caddy-config/issues"
#Changelog = "https://github.com/thewiw/py-caddy-config/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
